@@ -33,28 +33,24 @@ public class ShipmentService {
     private final ShipmentRepository shipmentRepository;
     private final ShipmentPublisher eventPublisher;
 
-    // ===== Create Shipment (called by RabbitMQ consumer) =====
+    // Create Shipment (called by RabbitMQ consumer)
     @Transactional
     @Retryable(
             retryFor = {ObjectOptimisticLockingFailureException.class, CannotAcquireLockException.class},
             maxAttempts = 4,
-            backoff = @Backoff(delay = 150, multiplier = 2)
-
-    )
+            backoff = @Backoff(delay = 150, multiplier = 2))
     public void createShipment(OrderConfirmedEvent event) {
 
         if (shipmentRepository.existsByOrderId(event.getOrderId())) {
-            log.warn(">>> Shipment already exists for order: {}",
-                    event.getOrderId());
-            throw new ShipmentAlreadyExistsException(
-                    "Shipment already exists for order: " + event.getOrderId());
+            log.warn(">>> Shipment already exists for order: {}", event.getOrderId());
+            throw new ShipmentAlreadyExistsException("Shipment already exists for order: " + event.getOrderId());
         }
 
         // Mock courier allocation
-        CourierPartner courier = allocateCourier();
+        CourierPartner courier = helper(); // allocates courier
 
         // Mock tracking ID
-        String trackingId = generateTrackingId(courier);
+        String trackingId = generateTrackingId(courier); //Generates mock tracking id with prefix
 
         Shipment shipment = Shipment.builder()
                 .orderId(event.getOrderId())
@@ -66,33 +62,29 @@ public class ShipmentService {
                 .build();
 
         shipmentRepository.save(shipment);
-        log.info(">>> Shipment created for order: {} courier: {} tracking: {}",
-                event.getOrderId(), courier, trackingId);
+        log.info(">>> Shipment created for order: {} courier: {} tracking: {}", event.getOrderId(), courier, trackingId);
     }
 
-    // ===== Mark Delivered =====
+    // Mark Delivered
     @Transactional
     public ShipmentResponse markDelivered(String shipmentId, String tenantId) {
 
         Shipment shipment = shipmentRepository.findById(shipmentId)
-                .orElseThrow(() -> new ShipmentNotFoundException(
-                        "Shipment not found: " + shipmentId));
+                .orElseThrow(() -> new ShipmentNotFoundException("Shipment not found: " + shipmentId));
 
         if (!shipment.getTenantId().equals(tenantId)) {
-            throw new InvalidShipmentStateException(
-                    "Not authorized to update this shipment");
+            throw new InvalidShipmentStateException("Not authorized to update this shipment");
         }
 
         if (shipment.getStatus() == ShipmentStatus.DELIVERED) {
-            throw new InvalidShipmentStateException(
-                    "Shipment already delivered");
+            throw new InvalidShipmentStateException("Shipment already delivered");
         }
 
         shipment.setStatus(ShipmentStatus.DELIVERED);
         shipment.setDeliveredAt(LocalDateTime.now());
         shipmentRepository.save(shipment);
 
-        // Publish ORDER_DELIVERED event
+        // Publish ORDER DELIVERED event
         eventPublisher.publishOrderDelivered(
                 OrderDeliveredEvent.builder()
                         .orderId(shipment.getOrderId())
@@ -104,73 +96,72 @@ public class ShipmentService {
         return mapToResponse(shipment);
     }
 
-    // ===== Get Shipment by ID =====
+    // Get Shipment by ID
     public ShipmentResponse getShipment(String shipmentId, String tenantId) {
         Shipment shipment = shipmentRepository.findById(shipmentId)
-                .orElseThrow(() -> new ShipmentNotFoundException(
-                        "Shipment not found: " + shipmentId));
+                .orElseThrow(() -> new ShipmentNotFoundException("Shipment not found: " + shipmentId));
 
         if (!shipment.getTenantId().equals(tenantId)) {
-            throw new InvalidShipmentStateException(
-                    "Not authorized to view this shipment");
+            throw new InvalidShipmentStateException("Not authorized to view this shipment");
         }
 
         return mapToResponse(shipment);
     }
 
-    // ===== Get Shipment by Order ID =====
+    // Get Shipment by Order ID
     public ShipmentResponse getShipmentByOrder(String orderId, String tenantId) {
         Shipment shipment = shipmentRepository.findByOrderId(orderId)
-                .orElseThrow(() -> new ShipmentNotFoundException(
-                        "Shipment not found for order: " + orderId));
+                .orElseThrow(() -> new ShipmentNotFoundException("Shipment not found for order: " + orderId));
 
         if (!shipment.getTenantId().equals(tenantId)) {
-            throw new InvalidShipmentStateException(
-                    "Not authorized to view this shipment");
+            throw new InvalidShipmentStateException("Not authorized to view this shipment");
         }
 
         return mapToResponse(shipment);
     }
 
-    // ===== Get All Shipments by Tenant =====
+    // Get All Shipments by Tenant
     public List<ShipmentResponse> getShipmentsByTenant(String tenantId) {
         return shipmentRepository.findByTenantId(tenantId)
                 .stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    // ===== Get Shipments by Status =====
-    public List<ShipmentResponse> getShipmentsByStatus(
-            String tenantId, ShipmentStatus status) {
+    // Get Shipments by Status
+    public List<ShipmentResponse> getShipmentsByStatus(String tenantId, ShipmentStatus status) {
+
         return shipmentRepository
                 .findByTenantIdAndStatus(tenantId, status)
                 .stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    // ===== Mock Courier Allocation =====
-    private CourierPartner allocateCourier() {
+    // Mock Courier Allocation
+    private CourierPartner helper() {
         CourierPartner[] partners = CourierPartner.values();
-        int index = (int) (Math.random() * partners.length);
+        int n = partners.length;
+        int index = (int) (Math.random() * n); // randomly assign partners
         return partners[index];
     }
 
-    // ===== Mock Tracking ID Generation =====
+    // Mock Tracking ID Generation
     private String generateTrackingId(CourierPartner courier) {
         String prefix = switch (courier) {
-            case DELHIVERY -> "DLV";
-            case SHIPROCKET -> "SHR";
-            case BLUEDART -> "BLD";
+            case DELHIVERY -> "DEL";
+            case SHIPROCKET -> "SHI";
+            case BLUEDART -> "BLU";
         };
-        return prefix + "-" + UUID.randomUUID()
+
+        prefix = prefix + "-" + UUID.randomUUID()
                 .toString()
-                .substring(0, 8)
-                .toUpperCase();
+                .substring(0, 8).toUpperCase();
+
+        return prefix;
     }
 
-    // ===== Map to Response =====
+    // Map to Response
     private ShipmentResponse mapToResponse(Shipment shipment) {
         return ShipmentResponse.builder()
                 .id(shipment.getId())
